Containing block overrides not cleared for position:absolute

Whenever a position:absolute block gets a new containing block the
previously set containing block overrides are not cleared. This causes the
block not to be properly layout for its new containing block (for example
when using relative sizes).

In particular this affects grid items which always get a containing block
override size (which represent the grid areas) in case their
containing block switches from the grid container to a grid ancestor.

Bug: 680468
Change-Id: I27f2cf871ba011db3f9532368b22a038b7a4c5b3
Reviewed-on: https://chromium-review.googlesource.com/559547
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Sergio Villar <svillar@igalia.com>
Cr-Commit-Position: refs/heads/master@{#484620}
Former-commit-id: 2a504cc9bdf1418fc0cb67923c1c1e93c78c857e